fixed stars gap and product-list width

--- a/src/styles/blocks/product-list.scss
+++ b/src/styles/blocks/product-list.scss
@@ -5,7 +5,7 @@
   display: flex;
   flex-flow: row wrap;
   justify-content: space-between;
-  width: get-product-list-width(4);
+  width: $card-width * 4 + $product-list-card-gap * 3;
 
   &__card {
     margin-bottom: 46px;
