--- a/src/styles/blocks/stars.scss
+++ b/src/styles/blocks/stars.scss
@@ -1,14 +1,18 @@
 .stars {
   display: flex;
   justify-content: space-between;
-  gap: 4px;
 
   &__star {
     height: 16px;
     width: 16px;
+    margin-right: 4px;
     background-image: url(../images/star-active.svg);
     background-repeat: no-repeat;
     background-position: center;
+
+    &:last-child {
+      margin-right: 0;
+    }
   }
 }
 
